--- a/index.html
+++ b/index.html
@@ -1116,6 +1116,8 @@
 
     <!-- Leaflet JS -->
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+    <!-- Imgur API Integration -->
+    <script src="imgur.js"></script>
     <script src="map.js"></script>
 </body>
 </html>
